fix top bar navigation broken in zurb foundation upgrade

--- a/app/assets/stylesheets/navigation.css.scss
+++ b/app/assets/stylesheets/navigation.css.scss
@@ -3,14 +3,8 @@
 .top-bar {
   margin: 0 0 20px 0;
 
-  ul {
+  ul.left {
     background: $cmOffBlack;
-    li.logo, li.toggle-topbar, li.name {
-      background: $cmOffBlack;
-    }
-    li.logo {
-      a:hover { background: $cmOffBlack; }
-    }
     > li.cta:hover { background: $cmOffBlack !important; }  //do not highlight top bar rectangle behind button
     > li.cta .button {   border: $cmPurple;
     background: $cmPurple;
